[package]
name = "tinyudp"
description = "A tiny abstraction for UDP."
keywords = ["udp", "async"]
repository = "https://github.com/vikpe/tinyudp"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.5.1"
edition = "2024"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[features]
ci = []
