[package]
name = "tinyudp"
description = "A tiny abstraction for UDP."
keywords = ["udp", "async"]
repository = "https://github.com/vikpe/tinyudp"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.6.0"
edition = "2024"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[dependencies]
thiserror = "2.0.12"

# optional
tokio = { version = "1.44.1", optional = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
anyhow = "1.0.97"

[features]
ci = []
tokio = ["dep:tokio"]
